--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <option value='9'>Date</option>
             <option value='10'>Notes</option>
         </select>
-        <input type='text' value='search'></input>
+        <input type='text' value='search'>
         by Chris Preece, <a href="mailto:shaneguignard@gmail.com">Shane Guignard </a>, and Matt Lefebvre
     </div>
     <div class="item">
