updated image sources

--- a/pages/trees.html
+++ b/pages/trees.html
@@ -12,14 +12,14 @@
 
 <body>
     <div id="header">
-        <img id='title' src="graphics/title.png"><br>
+        <img id='title' src="../graphics/title.png"><br>
         by Chris Preece, <a href="mailto:shaneguignard@gmail.com">Shane Guignard </a>, and Matt Lefebvre
     </div>
 
     <div id="content">
         <div class="item">
             <div class="picture">
-                <object type="image/jpeg" data="images/jpeg/138l(a).jpeg"><img src="images/uoftForestry.jpg"></object>
+                <object type="image/jpeg" data="../images/jpeg/138l(a).jpeg"><img src="../images/uoftForestry.jpg"></object>
             </div>
             <table>
                 <tr>
@@ -70,7 +70,7 @@
         </div>
         <div class="item">
             <div class="picture">
-                <object type="image/jpeg" data="images/jpeg/139l(a).jpeg"><img src="images/uoftForestry.jpg"></object>
+                <object type="image/jpeg" data="../images/jpeg/139l(a).jpeg"><img src="../images/uoftForestry.jpg"></object>
             </div>
             <table>
                 <tr>
@@ -121,7 +121,7 @@
         </div>
         <div class="item">
             <div class="picture">
-                <object type="image/jpeg" data="images/jpeg/151l(a).jpeg"><img src="images/uoftForestry.jpg"></object>
+                <object type="image/jpeg" data="../images/jpeg/151l(a).jpeg"><img src="../images/uoftForestry.jpg"></object>
             </div>
             <table>
                 <tr>
