path to about and trees.html

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 <body>
     <img id='title' src='graphics/title.png'>
     <nav>
-        <a href='about.html'><img id='about' src='graphics/aboutus.png'></a>
-        <a href='trees.html'><img id='trees' src='graphics/trees.png'></a>
+        <a href='pages/about.html'><img id='about' src='graphics/aboutus.png'></a>
+        <a href='pages/trees.html'><img id='trees' src='graphics/trees.png'></a>
     </nav>
 </body>
 </html>
