--- a/pages/trees.html
+++ b/pages/trees.html
@@ -6,171 +6,39 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!--Scales the display to the same resolution on all devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="trunk.js"></script>
     <link rel="stylesheet" type="text/css" href="leaves.css" />
 </head>
 
 <body>
     <div id="header">
         <img id='title' src="../graphics/title.png"><br>
-        by Chris Preece, <a href="mailto:shaneguignard@gmail.com">Shane Guignard </a>, and Matt Lefebvre
     </div>
+    <hr>
+    <div id='menuButton'></div>
+    <nav id='navPane'>
 
+        <img src='../images/uoftForestry.jpg' id='navImg'>
+        <ni><a href='myJson.js'>Raw Data</a></ni>
+        <select id='dropdown' onchange="updateNav()">
+            <option selected>Species</option>
+            <option>Family</option>
+            <option>Common Name</option>
+            <option>Genus</option>
+            <option>Location</option>
+            <option>Collector</option>
+            <option>Contributor</option>
+            <option>Date</option>
+        </select>
+        <div id='filter'>
+            
+            <ni>Example 1</ni>
+            <ni>Example 2</ni>
+        </div>
+    </nav>
     <div id="content">
-        <div class="item">
-            <div class="picture">
-                <object type="image/jpeg" data="../images/jpeg/138l(a).jpeg"><img src="../images/uoftForestry.jpg"></object>
-            </div>
-            <table>
-                <tr>
-                    <td class='specs'>Type</td>
-                    <td class='detail'>L</td>
-                </tr>
-                <tr>
-                    <td class='specs'>Num</td>
-                    <td class='detail'>138.0</td>
-                </tr>
-                <tr>
-                    <td class='specs'>Genus</td>
-                    <td class='detail'></td>
-                </tr>
-                <tr>
-                    <td class='specs'>Species</td>
-                    <td class='detail'></td>
-                </tr>
-                <tr>
-                    <td class='specs'>Family</td>
-                    <td class='detail'></td>
-                </tr>
-                <tr>
-                    <td class='specs'>ComName</td>
-                    <td class='detail'>Sap. Y. Poplar </td>
-                </tr>
-                <tr>
-                    <td class='specs'>Location</td>
-                    <td class='detail'>Toronto, Ontario</td>
-                </tr>
-                <tr>
-                    <td class='specs'>Collector</td>
-                    <td class='detail'></td>
-                </tr>
-                <tr>
-                    <td class='specs'>Contributor</td>
-                    <td class='detail'>R. Bury & Co.</td>
-                </tr>
-                <tr>
-                    <td class='specs'>Date</td>
-                    <td class='detail'>1925.0</td>
-                </tr>
-                <tr>
-                    <td class='specs'>Notes</td>
-                    <td class='detail'></td>
-                </tr>
-            </table>
-        </div>
-        <div class="item">
-            <div class="picture">
-                <object type="image/jpeg" data="../images/jpeg/139l(a).jpeg"><img src="../images/uoftForestry.jpg"></object>
-            </div>
-            <table>
-                <tr>
-                    <td class='specs'>Type</td>
-                    <td class='detail'>L</td>
-                </tr>
-                <tr>
-                    <td class='specs'>Num</td>
-                    <td class='detail'>139.0</td>
-                </tr>
-                <tr>
-                    <td class='specs'>Genus</td>
-                    <td class='detail'></td>
-                </tr>
-                <tr>
-                    <td class='specs'>Species</td>
-                    <td class='detail'></td>
-                </tr>
-                <tr>
-                    <td class='specs'>Family</td>
-                    <td class='detail'></td>
-                </tr>
-                <tr>
-                    <td class='specs'>ComName</td>
-                    <td class='detail'>Cottonwood </td>
-                </tr>
-                <tr>
-                    <td class='specs'>Location</td>
-                    <td class='detail'>Toronto, Ontario</td>
-                </tr>
-                <tr>
-                    <td class='specs'>Collector</td>
-                    <td class='detail'></td>
-                </tr>
-                <tr>
-                    <td class='specs'>Contributor</td>
-                    <td class='detail'>R. Bury & Co.</td>
-                </tr>
-                <tr>
-                    <td class='specs'>Date</td>
-                    <td class='detail'>1925.0</td>
-                </tr>
-                <tr>
-                    <td class='specs'>Notes</td>
-                    <td class='detail'></td>
-                </tr>
-            </table>
-        </div>
-        <div class="item">
-            <div class="picture">
-                <object type="image/jpeg" data="../images/jpeg/151l(a).jpeg"><img src="../images/uoftForestry.jpg"></object>
-            </div>
-            <table>
-                <tr>
-                    <td class='specs'>Type</td>
-                    <td class='detail'>L</td>
-                </tr>
-                <tr>
-                    <td class='specs'>Num</td>
-                    <td class='detail'>151.0</td>
-                </tr>
-                <tr>
-                    <td class='specs'>Genus</td>
-                    <td class='detail'></td>
-                </tr>
-                <tr>
-                    <td class='specs'>Species</td>
-                    <td class='detail'></td>
-                </tr>
-                <tr>
-                    <td class='specs'>Family</td>
-                    <td class='detail'></td>
-                </tr>
-                <tr>
-                    <td class='specs'>ComName</td>
-                    <td class='detail'>Figured Mexican Mahogay </td>
-                </tr>
-                <tr>
-                    <td class='specs'>Location</td>
-                    <td class='detail'>Toronto, Ontario</td>
-                </tr>
-                <tr>
-                    <td class='specs'>Collector</td>
-                    <td class='detail'></td>
-                </tr>
-                <tr>
-                    <td class='specs'>Contributor</td>
-                    <td class='detail'>R. Bury & Co.</td>
-                </tr>
-                <tr>
-                    <td class='specs'>Date</td>
-                    <td class='detail'>1925.0</td>
-                </tr>
-                <tr>
-                    <td class='specs'>Notes</td>
-                    <td class='detail'></td>
-                </tr>
-            </table>
-        </div>
-        Etc...
     </div>
 </body>
+<script type='text/javascript' src='myJson.js'></script>
+<script type="text/javascript" src="trunk.js"></script>
+
 </html>
