--- a/pages/about.html
+++ b/pages/about.html
@@ -1,7 +1,10 @@
 <html>
 <head>
     <title>About Us</title>
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <!--Scales the display to the same resolution on all devices-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         #title {
             display: block;
